rhino: switch to JDK 25, tidy up